--- a/css/style.css
+++ b/css/style.css
@@ -186,10 +186,11 @@ header .navbar ul li a:hover {
 
   .home h1 {
     font-size: 3rem;
+    line-height: 0;
   }
 
   .home h2 {
-    font-size: 4rem;
+    font-size: 5rem;
   }
 
   .home h3 {
